# technical-tests

./: readme.md
.github/: dependabot.yml
.github/workflows/: k8s-challenger-lint.yml
kubernetes/: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
kubernetes/candidate-env/: Dockerfile  setup-environment.sh  start-session.sh
kubernetes/candidate-env/challenge-files/: challenge-guide.md  kubectl-cheatsheet.md
kubernetes/challenges/: database-typo.md  database-typo.yaml  memory-limit.md  memory-limit.yaml  network-issue.md  network-issue.yaml  performance-issue.md  performance-issue.yaml
kubernetes/cli/: Dockerfile  __init__.py  challenges.py  main.py
python-django/: manage.py  pyproject.toml  readme.md  requirements.txt
python-django/apps/api/: urls.py
python-django/apps/flags/: urls.py  views.py
python-django/fsdjangotest/: asgi.py  settings.py  urls.py  wsgi.py
python-django/tests/flags/: test_flags_api.py
