[project]
name = "flagsmith-interviews"
version = "0.1.0"
description = "Technical interview challenge system for Flagsmith infrastructure debugging"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "ty>=0.0.1a25",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
flagsmith-challenger = "cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "COM",    # flake8-commas (trailing commas)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by line-length)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["cli"]